--- a/src/main/resources/templates/categoria/modifica.html
+++ b/src/main/resources/templates/categoria/modifica.html
@@ -13,13 +13,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
         
-        <section th:replace="~{categoria/fragmentos :: botonesAgregar}"/>
-        <section th:replace="~{categoria/fragmentos :: agregarCategoria}"/>
-        <section th:replace="~{categoria/fragmentos :: listadoCategorias}"/>
-        
-    
-
+        <section th:replace="~{categoria/fragmentos :: editarCategoria}"/>
         
         <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
              </html>
+
