--- a/src/main/resources/templates/pruebas/fragmentos.html
+++ b/src/main/resources/templates/pruebas/fragmentos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+
+        <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
@@ -22,8 +23,9 @@
                            >[[${categoria.descripcion}]]</a>
                     </li>                    
                 </ul>
-            </div>
         </section>
-     
     </body>
+</html>               <ul class="nav nav-tabs">                    <li class="nav-item">                        <a class="nav-link"                            aria-current="page"                            href="/pruebas/listado"                           >[[#{pruebas.todas}]]</a>                    </li>                    <li th:each="categoria : ${categorias}" class="nav-item">                        <a class="nav-link"                            th:href="@{/pruebas/listado/}+${categoria.idCategoria}"                           >[[${categoria.descripcion}]]</a>                    </li>                                    </ul>            </div>        </section>
+
+         </body>
 </html>
