--- a/src/main/resources/templates/pruebas/listado2.html
+++ b/src/main/resources/templates/pruebas/listado2.html
@@ -14,7 +14,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <header th:replace="~{layout/plantilla :: header}"/>
         
 
-        <section th:replace="~{pruebas/fragmentos :: categoriasTabs}"/>
+        <section th:replace="~{pruebas/fragmentos :: filtros}"/>
         <section th:replace="~{pruebas/fragmentos :: listadoProductos}"/>
         
     
