--- a/src/main/resources/templates/pruebas/fragmentos.html
+++ b/src/main/resources/templates/pruebas/fragmentos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-        <html xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
@@ -24,8 +24,56 @@
                     </li>                    
                 </ul>
         </section>
-    </body>
-</html>               <ul class="nav nav-tabs">                    <li class="nav-item">                        <a class="nav-link"                            aria-current="page"                            href="/pruebas/listado"                           >[[#{pruebas.todas}]]</a>                    </li>                    <li th:each="categoria : ${categorias}" class="nav-item">                        <a class="nav-link"                            th:href="@{/pruebas/listado/}+${categoria.idCategoria}"                           >[[${categoria.descripcion}]]</a>                    </li>                                    </ul>            </div>        </section>
 
-         </body>
+        <!-- 2 Sección para mostrar la informacion de los productos seleccionados-->
+        <section th:fragment="listadoProductos" 
+                 <div class="row row-cols-4">
+                <div class="card p-2" th:each="p : ${productos}" >
+                    <figure>
+                        <img th:src="${p.rutaImagen}" class="card-img-top" height ="200"  alt="..."/> 
+                        <figcaption>
+                            ¢[[${p.precio}+'('+${p.existencias}+')']]  <!-- 0162 saca el simbolo de colones-->
+                        </figcaption>
+                    </figure>
+                    <div class="card-header">
+                        [[${p.descripcion}]]
+                    </div>
+                    <div class="card-body">
+                        <p>[[${p.detalle}]]</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 3 Sección para mostrar los filtros a desarrollar-->
+        <section th:fragment="filtros" 
+                 <div class="row p-3">
+                     <div class="col-md-3">
+                          <form method="post" th:action="@{/pruebas/query1}">
+                    <div class="card">
+                        <div class="card-header">
+                            [[#{pruebas.ampliadas}]] 
+                        </div>
+                        <div class ="card-body">
+                            <div class="mb-3">
+                                <label for="precioInf">[[#{pruebas.precio.inferior}]]</label>
+                                <input type="number" class="form-control" name="precioInf" required="true"/>
+                            </div>
+                            <div class="mb-3">
+                                <label for="precioSub">[[#{pruebas.precio.superior}]]</label>
+                                <input type="number" class="form-control" name="precioSub" required="true"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <button type="sumit" class="btn btn-primary">
+                            <i class="fas fa-check"></i>[[#{pruebas.ampliadas}]] 
+                        </button>
+                    </div>
+                </form>
+                     </div>
+            </div>
+        </section>
+
+    </body>
 </html>
